Ajout & suppression taches
Ajout Model, entree et suppression de taches

--- a/TaskMaster/AppShell.xaml
+++ b/TaskMaster/AppShell.xaml
@@ -9,7 +9,7 @@
     Title="TaskMaster">
 
     <ShellContent
-        Title="Home"
+        Title="TaskMaster"
         ContentTemplate="{DataTemplate views:MainPage}"
         Route="MainPage" />
 </Shell>
